fix: increase navbar font-size on mobile menu

--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ body.dark .about-text p {
     height: 100vh;
     width: 40%;
     z-index: 10;
-    font-size: 0.8rem;
+    font-size: 1.3rem;
     backdrop-filter: blur(5px) saturate(180%) brightness(150%) blur(10px);
     background-color: rgba(0, 0, 0, 0.9);
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px 0px,
